--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\Routing": "src/",
-      "App\\Routing\\Http\\": "src/Controllers/Http",
-      "App\\Routing\\Controllers\\Requests\\": "src/Controllers/Requests",
+      "App\\Routing\\": "src/",
+      "App\\Routing\\Http\\": "src/Controllers/Http/",
+      "App\\Routing\\Controllers\\Requests\\": "src/Controllers/Requests/",
       "App\\Routing\\Interfaces\\": "src/Interfaces/",
-      "App\\Routing\\Scheme\\Scheme\\Blueprints\\": "src/Scheme/Blueprints",
-      "App\\Routing\\Scheme\\Helper\\": "src/Scheme/Helper",
-      "App\\Routing\\Scheme\\": "src/Scheme"
+      "App\\Routing\\Scheme\\Scheme\\Blueprints\\": "src/Scheme/Blueprints/",
+      "App\\Routing\\Scheme\\Helper\\": "src/Scheme/Helper/",
+      "App\\Routing\\Scheme\\": "src/Scheme/"
     }
   }
 }
